# cpe487587HW

./: .gitignore  README.md  malwaredatadownload.sh  multiclass_impl.sh  pyproject.toml  run_hw02_animation.sh
scripts/: binaryclassification_animate_impl.py  binaryclassification_impl.py  multiclass_eval.py  multiclass_impl.py
src/cpe487587hw/: __init__.py
src/cpe487587hw/animation/: __init__.py
src/cpe487587hw/deepl/: multiclass.py  two_layer_binary_classification.py
