[project]
name = "cpe487587hw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Purplegh", email = "Purplegh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "torch>=2.10.0",
]

[tool.maturin]
module-name = "cpe487587hw._core"
python-packages = ["cpe487587hw"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
